fix(tasks): add customFields on all notifications